# fileparser

./: README.md  pyproject.toml
src/fileparser/: __init__.py  __main__.py  parser.py
tests/: test_parser.py
