[project]
name = "fileparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Captain Solaris", email = "hello@spielprinzip.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/realcaptainsolaris/fileparser"

[project.scripts]
fileparser = "fileparser.__main__:main"
